Make the jumping girl disappear after scrolling down to a certain point

--- a/portfolio/src/components/motion/Motion.css
+++ b/portfolio/src/components/motion/Motion.css
@@ -3,3 +3,12 @@
     padding-bottom: 2000px;
    
 }
+
+#imagesequence {
+    opacity: 0;
+    
+}
+#imagesequence.visible {
+    opacity: 1;
+   
+}
