fixed scroll position

--- a/portfolio/src/components/scrollLabel/ScrollLabel.css
+++ b/portfolio/src/components/scrollLabel/ScrollLabel.css
@@ -5,10 +5,12 @@
 
 .scrollWord {
   width: 25%;
+  margin-left:20px; 
   
   
 }
 
 .scrollWraper {
-  margin-left: 500px;
+  width:50%;
+  margin-left:40%;
 }
