--- a/portfolio/src/components/jumpGirl/JumpGirl.css
+++ b/portfolio/src/components/jumpGirl/JumpGirl.css
@@ -1,8 +1,48 @@
 #reveal1 {
-    opacity: 0;
-    
+  opacity: 0;
+  z-index: 10;
+  
 }
 #reveal1.visible {
-    opacity: 1;
+  opacity: 1;
+  z-index: 10;
+  
+}
+
+.cloudBig1 {
+    position: relative;
+    top:-608px;
+  
+  width:52%;
+ 
+}
+.cloudBig2{
+    position: relative;
+    top:-599px;
+    width:48%;
    
+    
+}
+
+#reveal2 {
+  opacity: 0;
+  -webkit-transform: translateY(40px);
+			 -moz-transform: translateY(40px);
+				-ms-transform: translateY(40px);
+				 -o-transform: translateY(40px);
+						transform: translateY(40px);
+		-webkit-transition: all 0.6s ease-out;
+			 -moz-transition: all 0.6s ease-out;
+				-ms-transition: all 0.6s ease-out;
+				 -o-transition: all 0.6s ease-out;
+						transition: all 0.6s ease-out;
+}
+
+#reveal2.visible2 {
+  opacity: 1;
+  -webkit-transform: none;
+  -moz-transform: none;
+  -ms-transform: none;
+  -o-transform: none;
+  transform: none;
 }
