--- a/portfolio/src/components/structure/Structure.css
+++ b/portfolio/src/components/structure/Structure.css
@@ -1,22 +1,26 @@
-#walker{
-    height: 100vh;
-    width: 100vw;
-    position: relative;
-    top: -150vh;
-}
-.slider{
-    display: flex;
-}
-.slide{
-    height: 50vh;
-    width: 100vw;
-    display: inline;
-    float: left;
-}
-.slider > div:nth-child(2n+1) .slide{
-    background-color: green;
-}
-.slider > div:nth-child(2n) .slide{
-    background-color: red;
+
+.hori-scroll {
+	min-height: 120vh; 
+	width: 100%;
+	overflow: hidden;
+	position: absolute;
+	top: 2000px; /* should be equal to min height above it */
+	left: 0px;
+	transition: transform 0s linear;
 }
 
+.in-scroll {
+	height: 100vh;
+	width: 300vh; /* width of horizontal scroll */
+    background-position: center;
+    background-color:lightpink;
+	background-size: cover;
+    transition: transform .15s linear;
+    
+}
+
+.in-scroll p{
+    margin-left:50px;
+   
+    font-size: 50px;
+}
