--- a/portfolio/src/components/structure/Structure.css
+++ b/portfolio/src/components/structure/Structure.css
@@ -11,7 +11,7 @@
 
 .in-scroll {
 	height: 100vh;
-	width: 1000vh; /* width of horizontal scroll */
+	width: 1700vh; /* width of horizontal scroll */
     background-position: center;
     background-color:lightpink;
 	background-size: cover;
@@ -35,6 +35,10 @@
 
 #tree3{
 	left:4700px;
+}
+
+#tree4{
+	left:7200px;
 }
 
 .kiwi{
