--- a/portfolio/src/components/languageTable/LanguageTable.css
+++ b/portfolio/src/components/languageTable/LanguageTable.css
@@ -39,3 +39,10 @@
     margin-left:30px;
 }
 
+@media only screen and (max-height: 700px) {
+    .languageLabel{
+        width:200px;
+        margin-bottom: 20px;
+    }
+}
+
