--- a/portfolio/src/components/ground/Ground.css
+++ b/portfolio/src/components/ground/Ground.css
@@ -4,10 +4,18 @@
 }
 
 #ground2{
-    width:50%
+    width:50%;
 }
 
 #ground1{
     width:50%
 }
 
+@media only screen and (max-height: 800px) {
+    #ground{
+        
+        top:-1520px;
+    }
+
+
+} 
