--- a/portfolio/src/components/project1/Project1.css
+++ b/portfolio/src/components/project1/Project1.css
@@ -26,3 +26,13 @@
     width:200px;
 
 }
+
+@media only screen and (max-height: 800px) {
+    .project1{
+        
+        top:120px;
+        
+    }
+    
+}
+    
