--- a/portfolio/src/components/motion/Motion.css
+++ b/portfolio/src/components/motion/Motion.css
@@ -15,9 +15,23 @@
   top: 550px;
 }
 
-@media only screen and (max-height: 800px) {
+@media only screen and (min-height:775px) and (max-height: 850px) {
   #myimg {
-    top: 480px;
+    top: 530px;
+    width:250px;
+  }
+}
+
+@media only screen and (min-height:700px) and (max-height: 775px) {
+  #myimg {
+    top: 490px;
+    width:250px;
+  }
+}
+
+@media only screen and (max-height: 700px) {
+  #myimg {
+    top: 450px;
     width:250px;
   }
 }
