--- a/portfolio/src/components/structure/Structure.css
+++ b/portfolio/src/components/structure/Structure.css
@@ -45,6 +45,10 @@
 	left:9500px;
 }
 
+#tree6{
+	left:11500px;
+}
+
 .kiwi{
 	position: absolute;
 	top:720px;
@@ -150,11 +154,26 @@
 	left:11200px;
 }
 
+#ground18{
+	width:700px;
+	left:11900px;
+}
+#ground19{
+	width:700px;
+	left:12600px;
+}
+
 .groundBackground{
 	position: absolute;
 	top:760px;
 	z-index: 1;
 	
+}
+
+.contact{
+	position: absolute;
+	top:0;
+	left:11800px;
 }
 
 @media only screen and (min-height:775px) and (max-height: 850px) {
