Added parallax effect to side draw 1

--- a/portfolio/src/components/sideDraw1/SideDraw1.css
+++ b/portfolio/src/components/sideDraw1/SideDraw1.css
@@ -1,7 +1,7 @@
 .kiwi {
   width: 100px;
   position: relative;
-  top:-100px;
+  top:-60px;
   left:100px;
 }
 
@@ -34,4 +34,10 @@
   position: relative;
   top:-180px;
   left:-380px;
+}
+
+.sideDraw1Wrapper{
+  position: absolute;
+  top:600px;
+  left:0;
 }
