--- a/portfolio/src/components/structure/Structure.css
+++ b/portfolio/src/components/structure/Structure.css
@@ -36,6 +36,7 @@
 
 #tree2{
 	left:3400px;
+	z-index: 1;
 }
 
 #tree3{
@@ -54,13 +55,19 @@
 	left:11500px;
 }
 
-
+.moon{
+	position: absolute;
+	top:70px;
+	left:3900px;
+	z-index: 1;
+}
 
 .kiwi2{
 	position: absolute;
 	top:720px;
 	left:3450px;
 	width:100px;
+	z-index: 1;
 }
 
 .animation{
@@ -70,11 +77,6 @@
 	z-index: 1;
 }
 
-.tools{
-	position:absolute;
-	top:0;
-	left:3800px;
-}
 
 .projects{
 	position:absolute;
