--- a/portfolio/src/components/project2/Project2.css
+++ b/portfolio/src/components/project2/Project2.css
@@ -1,23 +1,33 @@
 .project2{
     position: absolute;
-    left:8700px;
-    top:150px;
+    left:8650px;
+    
 }
 
-.p2p1{
-    width:650px;
+.house2{
+    width:500px;
+    z-index: 1;
 }
-
-#detail2{
+.house3{
+    width:560px;
+    top:130px;
     position: absolute;
-    top:50px;
-    left:500px;
+    left:490px;
+    z-index: 1;
+}
+
+#base3{
+    padding: 50px 223px;
+    background-color: #434343;
+    position: absolute;
+    top:450px;
+    left:20px;
 }
 
 #bee2{
     position: absolute;
-    top:300px;
-    left:1100px;
+    top:-100px;
+    left:800px;
     width:200px;
 }
 
