--- a/portfolio/src/components/project3/Project3.css
+++ b/portfolio/src/components/project3/Project3.css
@@ -1,22 +1,27 @@
 .project3{
     position: absolute;
-    left:10500px;
+    left:10200px;
     top:120px;
 }
 
-.p3p1{
-    width:550px;
-    margin-bottom:30px;
-}
-
-.p3Table{
-    width:250px;
+#house5{
+    position: absolute;
+    left:480px;
+    top:-150px;
 }
 
 .bee3{
     position:absolute;
-    top:200px;
-    left:1100px;
+    top:-100px;
+    left:600px;
     width:200px;
     
+}
+
+#base4{
+    position: absolute;
+    padding: 50px 265px;
+    top:512px;
+    left:780px;
+    background-color: #434343;
 }
