--- a/portfolio/src/components/contact/Contact.css
+++ b/portfolio/src/components/contact/Contact.css
@@ -12,8 +12,9 @@
 
 .thankyou{
     position: absolute;
-    top:150px;
-    left:700px;
+    top:10px;
+    left:600px;
+    width:400px;
     
     
 }
