--- a/portfolio/src/components/motion/Motion.css
+++ b/portfolio/src/components/motion/Motion.css
@@ -12,26 +12,26 @@
 #myimg {
   z-index: 10;
   position: relative;
-  top: 550px;
+  bottom: -550px;
 }
 
 @media only screen and (min-height:775px) and (max-height: 850px) {
   #myimg {
-    top: 530px;
+    bottom: -500px;
     width:250px;
   }
 }
 
 @media only screen and (min-height:700px) and (max-height: 775px) {
   #myimg {
-    top: 490px;
+    bottom: -500px;
     width:250px;
   }
 }
 
 @media only screen and (max-height: 700px) {
   #myimg {
-    top: 450px;
+    bottom: -450px;
     width:250px;
   }
 }
